[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "common_dl_utils"
version = "0.0.16"
authors = [
    { name="Simon Martinus Koop", email="s.m.koop@tue.nl"}
]
description = "Utilities for common tasks in deep learning research, such as creating models from configs"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]

